--- a/package.json
+++ b/package.json
@@ -10,19 +10,19 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "css-loader": "^6.2.0",
-    "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.3.2",
-    "mini-css-extract-plugin": "^2.2.1",
-    "webpack": "^5.51.1",
-    "webpack-cli": "^4.8.0",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.1",
+    "css-loader": "^6.2.0",
     "dotenv": "^16.4.5",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.3.2",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
     "stream-browserify": "^3.0.0",
+    "style-loader": "^4.0.0",
     "vm-browserify": "^1.1.2",
+    "webpack": "^5.51.1",
+    "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^4.0.0"
   }
 }
