--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --config webpack.config.js",
-    "dev": "webpack serve --history-api-fallback"
+    "dev": "webpack serve --history-api-fallback",
+    "deploy": "gh-pages -d dist"
   },
   "author": "",
   "license": "ISC",
@@ -15,6 +16,7 @@
     "css-loader": "^6.2.0",
     "dotenv": "^16.4.5",
     "file-loader": "^6.2.0",
+    "gh-pages": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
