--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --config webpack.config.js",
-    "dev": "webpack serve --history-api-fallback",
-    "deploy": "gh-pages -d dist"
+    "dev": "webpack serve --history-api-fallback"
   },
   "author": "",
   "license": "ISC",
