--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "프로그래머스 노션 클로닝 프로젝트 업그레이드",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --config webpack.config.js",
-    "dev": "webpack serve --history-api-fallback"
+    "build": "wepback --mode=production",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
+    "start": "webpack serve --open --mode=development"
   },
   "author": "",
   "license": "ISC",
