--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --config webpack.config.js",
-    "deploy": "gh-pages -d dist",
+    "deploy": "gh-pages -d docs",
     "start": "webpack serve --open --mode=development"
   },
   "author": "",
