--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "프로그래머스 노션 클로닝 프로젝트 업그레이드",
   "main": "main.js",
-  "homepage": "https://nayeon-hub.github.io/notion-clone-vanila/",
+  "homepage": "https://nayeon-hub.github.io/notion-clone-vanila",
   "scripts": {
     "build": "webpack --config webpack.config.js",
     "deploy": "gh-pages -d docs",
