--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "notion-clone-vanila",
   "version": "1.0.0",
   "description": "프로그래머스 노션 클로닝 프로젝트 업그레이드",
-  "main": "main.js",
+  "main": "index.js",
   "homepage": "https://nayeon-hub.github.io/notion-clone-vanila",
   "scripts": {
-    "build": "webpack --config webpack.config.js",
-    "start": "webpack serve --open --mode=development"
+    "build": "webpack",
+    "start": "webpack serve"
   },
   "author": "",
   "license": "ISC",
@@ -16,6 +16,7 @@
     "css-loader": "^6.2.0",
     "dotenv": "^16.4.5",
     "file-loader": "^6.2.0",
+    "html-loader": "^5.1.0",
     "html-webpack-plugin": "^5.3.2",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
