--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "notion-clone-vanila",
   "version": "1.0.0",
   "description": "프로그래머스 노션 클로닝 프로젝트 업그레이드",
-  "main": "index.js",
+  "main": "main.js",
   "homepage": "https://nayeon-hub.github.io/notion-clone-vanila",
   "scripts": {
     "build": "webpack",
