--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "file-loader": "^6.2.0",
     "html-loader": "^5.1.0",
     "html-webpack-plugin": "^5.3.2",
+    "mini-css-extract-plugin": "^2.9.2",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
     "stream-browserify": "^3.0.0",
