--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "1.0.0",
   "description": "프로그래머스 노션 클로닝 프로젝트 업그레이드",
   "main": "main.js",
-  "homepage": "https://nayeon-hub.github.io/notion-clone-vanila",
+  "homepage": "https://nayeon-hub.github.io/notion-clone-vanila/",
   "scripts": {
     "build": "webpack",
-    "start": "webpack serve"
+    "start": "webpack serve",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "author": "",
   "license": "ISC",
@@ -16,6 +18,7 @@
     "css-loader": "^6.2.0",
     "dotenv": "^16.4.5",
     "file-loader": "^6.2.0",
+    "gh-pages": "^6.2.0",
     "html-loader": "^5.1.0",
     "html-webpack-plugin": "^5.3.2",
     "mini-css-extract-plugin": "^2.9.2",
